# LinuxSysMonitor

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: format.h  linux_parser.h  ncurses_display.h  parser.h  process.h  processor.h  system.h
src/: duplicate.cpp  format.cpp  linux_parser.cpp  ncurses_display.cpp  parser.cpp  process.cpp  system.cpp
